fix grid overflow test

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -270,6 +270,7 @@ h3 {
 	text-align: center;
 	justify-content: center;
 	align-items: center;
+	max-width: 100%;
 }
 
 @include laptop {
@@ -284,6 +285,7 @@ h3 {
 	align-items: center;
 	flex-direction: column;
 	padding: 0 2rem;
+	max-width: 100%;
 }
 
 @include laptop {
@@ -294,6 +296,7 @@ h3 {
 
 .project-image {
 	max-width: 50%;
+	width: 100%;
 	transition: transform 5s;
 }
 
